manifest/softether/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: se-deployment
  labels:
    app: softether
spec:
  replicas: 1
  selector:
    matchLabels:
      name: softether
  template:
    metadata:
      labels:
        name: softether
        # softetherでkubednsを利用するためのNetworkPolicyを割り当てる
        vpn-server: "true"
    spec:
      containers:
      - name: softether
        image: ghcr.io/honahuku/softether:4.38.9760.v5
        ports:
        - containerPort: 443
        command: ["/start.sh"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: se-sandbox
  labels:
    app: se-sandbox
  annotations:
    description: "Sandbox environment for SoftEther deployment."
spec:
  replicas: 1
  selector:
    matchLabels:
      name: se-sandbox
  template:
    metadata:
      labels:
        name: se-sandbox
        # softetherでkubednsを利用するためのNetworkPolicyを割り当てる
        vpn-server: "true"
    spec:
      containers:
      - name: se-sandbox
        image: ghcr.io/honahuku/softether:4.38.9760.v5
        command: ['bash', '-c']
        args:
        - $(command)
        volumeMounts:
        - mountPath: /dev/net/tun
          name: dev-tun
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: false
      volumes:
      - hostPath:
          path: /dev/net/tun
          type: CharDevice
        name: dev-tun
