manifest/softether/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: se-service
  annotations:
    service.beta.kubernetes.io/vultr-loadbalancer-protocol: "tcp"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: se-deployment
  ports:
    - name: http
      port: 80
      targetPort: 443
